--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,7 @@ dl,
 dt,
 dd,
 ul,
+ol,
 li {
   margin: 0;
   padding: 0;
@@ -35,7 +36,8 @@ a {
   color: inherit;
 }
 
-ul {
+ul,
+ol {
   /*左の「・」を消す*/
   list-style: none;
 }
